# screenshot

./: .gitignore  PROJECT_STRUCTURE.md  README.md  build.bat  build.py  build_client.spec  build_server.spec  client.py  client_gui.py  config.json  main.py  pyproject.toml  requirements.txt  run_cli.py  run_client_gui.py  run_server_gui.py  server.py  server_gui.py  test_gui.py  使用说明.md
src/screenshot_tool/: __init__.py  cli.py
src/screenshot_tool/core/: __init__.py  client.py  config.py  server.py  server_main.py
src/screenshot_tool/gui/: __init__.py  client_gui.py  gui_utils.py  server_gui.py
src/screenshot_tool/utils/: __init__.py  file_utils.py  logger.py  network_utils.py
